--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,73 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+body{
+  background-color: rgba(132, 203, 173, 0.549);
+  display: grid;
   text-align: center;
 }
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+#root {
+  height: 100vh;
+  margin: 0;
+  padding: 2rem;
+  padding-top: 0;
+  text-align: center;
+  display: grid;
+  grid-template-rows: auto;
+  box-sizing: border-box; /* Ensures padding and borders are included in width and height */
 }
 
-@keyframes logo-spin {
+.headerWrapper {
+  justify-self: center;
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+  border: solid 1px black;
+  border-radius: 15px;
+  margin-bottom: 1vh;
+  background-color: rgba(255, 193, 157, 0.663);
+  max-width: 1280px;
+  width: 100%;
+  /* max-height: 20vh; */
+  justify-self: center; 
+  padding: 1rem;
+  box-sizing: border-box;
+
+}
+/* children .headerWrapper */
+  .title{
+    grid-row: 1/2;
+    grid-column: 1/2;
+    margin:0;
+  }
+  .instruct{
+    grid-row: 2/3;
+    grid-column: 1/2;
+    margin: 0;
+  }
+  .scoreContainer{
+    grid-row: 2/3;
+    grid-column: 2/3;
+    display: flex;
+    justify-content: space-evenly;
+  }
+
+
+/* children found in Cards.css */
+
+/* @keyframes logo-spin {
   from {
     transform: rotate(0deg);
   }
   to {
     transform: rotate(360deg);
   }
-}
+} */
 
-@media (prefers-reduced-motion: no-preference) {
+/* @media (prefers-reduced-motion: no-preference) {
   a:nth-of-type(2) .logo {
     animation: logo-spin infinite 20s linear;
   }
-}
+} */
 
 .card {
   padding: 2em;
 }
 
-.read-the-docs {
-  color: #888;
-}
+
