--- a/src/App.css
+++ b/src/App.css
@@ -5,17 +5,23 @@ body{
 }
 #root {
   height: 100vh;
+  width: 100vw;
   margin: 0;
-  padding: 2rem;
+  padding: 0;
   padding-top: 0;
   text-align: center;
-  display: grid;
-  grid-template-rows: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+ 
+  /* grid-template-columns: repeat(3, 1fr); */
+  grid-template-rows: auto; 
   box-sizing: border-box; /* Ensures padding and borders are included in width and height */
 }
 
 .headerWrapper {
-  justify-self: center;
+  align-self: center;
+  width: 1500px;
   display: grid;
   grid-template-columns: 3fr 1fr;
   border: solid 1px black;
@@ -25,7 +31,6 @@ body{
   max-width: 1280px;
   width: 100%;
   /* max-height: 20vh; */
-  justify-self: center; 
   padding: 1rem;
   box-sizing: border-box;
 
@@ -42,10 +47,45 @@ body{
     margin: 0;
   }
   .scoreContainer{
-    grid-row: 2/3;
+    grid-row: 1/3;
     grid-column: 2/3;
     display: flex;
     justify-content: space-evenly;
+    font-size: 1.5rem;
+    font-weight: bold;
+  }
+  .currentContainer{
+    color:blue;
+  }
+  .bestContainer{
+    color:rgb(3, 143, 3)
+  }
+
+  @media (max-width: 768px) {
+    #root{
+      height: 100%;
+    }
+    .headerWrapper{
+      width: 100vw;
+    }
+    .title{
+      font-size: 20px;
+
+    }
+    .instruct{
+      font-size: 12px;
+    }
+    .scoreContainer{
+      font-size: 12px;
+      display: grid;
+      grid-template-rows: repeat(2, min-content);
+    }
+    .currentContainer, .bestContainer{
+      display: flex;
+      gap: 5px;
+      justify-content: space-evenly;
+    }
+   
   }
 
 
