--- a/src/Cards.css
+++ b/src/Cards.css
@@ -1,10 +1,11 @@
 .deckContainer{
-  max-width: 1280px;
-  justify-self: center;
+  align-self: center;
+  max-width: 95vw;
+  /* justify-self: center; */
   display: grid;
   grid-template-rows: 1fr 1fr;
   grid-template-columns: repeat(6, 1fr);
-  gap: 10px;
+  gap:10px;
 }
 
 
@@ -38,4 +39,31 @@
   height: 25vh;
   justify-self: center;
   max-width: 100px; /* Ensures cards are not too large on big screens */
+}
+
+@media (max-width: 750px) {
+  .deckContainer{
+    grid-row: 2/3;
+    justify-self: flex-end;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(4, fit-content);
+    gap:2px;
+  }
+  .cardContainer{
+    width: 30vw;
+    padding:0;
+    grid-template-rows: fit-content 150px;
+    grid-template-columns: auto;
+  }
+  .card{
+    height:10vh;
+    padding:0;
+  }
+  .name{
+    padding: 0 1rem;
+    font-size: 12px;
+  }
+  
+ 
+
 }
